manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  securityContext:
    runAsUser: 101
    runAsGroup: 101
    fsGroup: 101
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: axeal
        image: axeal/axe.al
        ports:
        - containerPort: 8080
