manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: axeal
spec:
  selector:
    app: axeal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
